# wasm-serverless-poc

./: .gitmodules  README.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: build-artifacts.yml  build-images.yml  build.yml  release.yml
crun/: Dockerfile
images/: .dockerignore  Dockerfile.distroless  Dockerfile.wasm
images/echo/: Cargo.toml
images/echo/src/: main.rs
microk8s/: benchmark  distroless.yml  knative.yml  kustomization.yaml  setup-cluster  wasm.yml
