[dependencies]
bytecodec = "0.4.15"
ctrlc = { version = "3.2", features = ["termination"], optional = true }
httpcodec = "0.2.3"
wasmedge_wasi_socket = { version = "0.4.2", optional = true }

[features]
unix = [ "dep:ctrlc" ]
wasmedge = [ "dep:wasmedge_wasi_socket" ]

[package]
name = "echo"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
strip = true
